unpackaged/main/default/objects/inov8__PMT_Phase__c/fields/inov8__Deadline_formula__c.field-meta.xml
<CustomField>
    <fullName>inov8__Deadline_formula__c</fullName>
    <formula>IF(ISNULL(inov8__End_Date_Rollup__c),  IF(ISNULL( inov8__End_date_from_child__c), inov8__Project__r.inov8__Deadline_formula__c, inov8__End_date_from_child__c) , inov8__End_Date_Rollup__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>