unpackaged/main/default/objects/inov8__PMT_Phase__c/fields/inov8__Duration__c.field-meta.xml
<CustomField>
    <fullName>inov8__Duration__c</fullName>
    <formula>inov8__Deadline_formula__c -inov8__Kickoff_formula__c+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>