unpackaged/main/default/objects/inov8__PMT_Phase__c/fields/inov8__Expected_age_of_completion__c.field-meta.xml
<CustomField>
    <fullName>inov8__Expected_age_of_completion__c</fullName>
    <formula>IF( TODAY() &gt;  inov8__Deadline_formula__c , 100, ( TODAY() -  inov8__Kickoff_formula__c ) *  VALUE( SUBSTITUTE( inov8__Daily_progress__c , &#39; %&#39;, &#39;&#39;)  ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected % age of completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>