unpackaged/main/default/objects/inov8__PMT_Phase__c/fields/inov8__Health_Icon__c.field-meta.xml
<CustomField>
    <fullName>inov8__Health_Icon__c</fullName>
    <formula>IMAGE(
CASE(inov8__Phase_Health__c,
&quot;Not Started&quot;, &quot;/resource/inov8__PMT_Status_logos/Not_Started.png&quot;,
&quot;On Track&quot;, &quot;/resource/inov8__PMT_Status_logos/On_Track.png&quot;,
&quot;At risk&quot;, &quot;/resource/inov8__PMT_Status_logos/At_Risk.png&quot;,
&quot;Late&quot;, &quot;/resource/inov8__PMT_Status_logos/Late.png&quot;,
&quot;On Hold&quot;, &quot;/resource/inov8__PMT_Status_logos/On_Hold.png&quot;,
&quot;Completed&quot;, &quot;/resource/inov8__PMT_Status_logos/Completed.png&quot;,
&quot;Closed, not Completed&quot;, &quot;/resource/inov8__PMT_Status_logos/Closed_not_Completed.png&quot;,
&quot;/resource/inov8__PMT_Status_logos/On_Track.png&quot;),
&quot;status icon&quot;,25,25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase Health</label>
    <type>Text</type>
</CustomField>