unpackaged/main/default/objects/inov8__PMT_Phase__c/fields/inov8__Phase_Completion_Image__c.field-meta.xml
<CustomField>
    <fullName>inov8__Phase_Completion_Image__c</fullName>
    <formula>IMAGE(&quot;/resource/inov8__PMT_Status_Images/PMT_Percent_100.jpg&quot;, &quot;Completed&quot;, 10, ( inov8__Phase_Completion__c * 100 )/1.3) &amp; 
IMAGE(&quot;/resource/inov8__PMT_Status_Images/PMT_Percent_0.jpg&quot;, &quot;Zero&quot;, 10, (100 - inov8__Phase_Completion__c * 100 )/1.3) &amp; 
&#39; &#39; &amp; 
TEXT(ROUND(inov8__Phase_Completion__c * 100,0))&amp;&quot;%&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase Completion</label>
    <type>Text</type>
</CustomField>