unpackaged/main/default/objects/inov8__PMT_Phase__c/fields/inov8__Phase_Description__c.field-meta.xml
<CustomField>
    <fullName>inov8__Phase_Description__c</fullName>
    <inlineHelpText>A general description of the phase.</inlineHelpText>
    <label>Phase Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>