unpackaged/main/default/objects/inov8__PMT_Phase__c/fields/inov8__Phase_Weighted_Perc__c.field-meta.xml
<CustomField>
    <fullName>inov8__Phase_Weighted_Perc__c</fullName>
    <formula>inov8__Sum_Task_Duration__c * inov8__Phase_Completion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase Weighted %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>