unpackaged/main/default/objects/inov8__PMT_Phase__c/fields/inov8__Phases_with_completed_tasks__c.field-meta.xml
<CustomField>
    <fullName>inov8__Phases_with_completed_tasks__c</fullName>
    <label>Phases with completed tasks</label>
    <summaryFilterItems>
        <field>inov8__PMT_Task__c.inov8__Status__c</field>
        <operation>equals</operation>
        <value>&quot;Completed&quot;, &quot;Closed, not Completed&quot;</value>
    </summaryFilterItems>
    <summaryForeignKey>inov8__PMT_Task__c.inov8__Phase__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>