unpackaged/main/default/objects/inov8__PMT_Phase__c/fields/inov8__Sum_of_tasks_count_child__c.field-meta.xml
<CustomField>
    <fullName>inov8__Sum_of_tasks_count_child__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sum of tasks count child</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>