unpackaged/main/default/objects/inov8__PMT_Phase__c/fields/inov8__Sum_Task_Duration__c.field-meta.xml
<CustomField>
    <fullName>inov8__Sum_Task_Duration__c</fullName>
    <label>Sum Task Duration</label>
    <summarizedField>inov8__PMT_Task__c.inov8__Duration__c</summarizedField>
    <summaryForeignKey>inov8__PMT_Task__c.inov8__Phase__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>