unpackaged/main/default/objects/inov8__PMT_Phase__c/listViews/inov8__All1.listView-meta.xml
<ListView>
    <fullName>inov8__All1</fullName>
    <columns>inov8__Health_Icon__c</columns>
    <columns>inov8__Project__c</columns>
    <columns>NAME</columns>
    <columns>inov8__Phase_Completion__c</columns>
    <columns>inov8__Deadline_formula__c</columns>
    <columns>inov8__Kickoff_formula__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>